--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
 
-
-$md-dark-color: #121212;
-$dark-color: #000000;
+$md-dark-color: #383f46;
+$dark-color: #202428;
 $light-dark-color: #292929;
-$yellow-color: #E50914;
+$yellow-color: #F5C518;
