--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -1,15 +1,15 @@
 .search-container {
-  background-color: $md-dark-color;
-  height: 80px;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1rem;
+  height: 100px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .logo {
   padding: 1rem 0;
-  border-bottom: 1px solid $light-dark-color;
-
   p {
     font-size: 2rem;
     color: #fff;
@@ -113,34 +113,10 @@
 .hide-search-list {
   display: none;
 }
-
-@media (max-width: 450px) {
-  .logo p {
-    font-size: 1.4rem;
-  }
-  .search-element .form-control {
-    width: 90%;
-    margin: 0 auto;
-    padding: 0.5rem 1rem;
-  }
-  .search-element h3 {
-    font-size: 1.4rem;
-  }
-  .search-list {
-    width: 90%;
-    right: 50%;
-    transform: translateX(50%);
-  }
-  .search-list .search-list-item {
-    width: 100%;
-  }
-}
-
-@media (min-width: 800px) {
-  .search-element {
-    flex-direction: row;
-  }
-  .search-element h3 {
+.search-element {
+  flex-direction: row;
+  h3{
     margin-bottom: 0;
   }
 }
+
