--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -24,27 +24,27 @@ img {
   padding: 0 1rem;
 }
 
+.container-top {
+  background-color: #383f46;
+}
+
 .wrapper {
   min-height: 100vh;
-  background-color: #000000;
-}
-.wrapper .container .container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 1rem;
+  background-color: #202428;
 }
 
 .search-container {
-  background-color: #121212;
-  height: 80px;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1rem;
+  height: 100px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .logo {
   padding: 1rem 0;
-  border-bottom: 1px solid #292929;
 }
 .logo p {
   font-size: 2rem;
@@ -52,7 +52,7 @@ img {
   font-weight: bold;
 }
 .logo p span {
-  color: #E50914;
+  color: #F5C518;
 }
 
 .search-element {
@@ -91,7 +91,7 @@ img {
 .search-element .search-list .search-list-item {
   background-color: #292929;
   padding: 0.5rem;
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid #202428;
   width: 342px;
   color: #fff;
   cursor: pointer;
@@ -126,7 +126,7 @@ img {
 }
 
 .search-list::-webkit-scrollbar-thumb {
-  background-color: #E50914;
+  background-color: #F5C518;
   outline: none;
   border-radius: 10px;
 }
@@ -135,35 +135,13 @@ img {
   display: none;
 }
 
-@media (max-width: 450px) {
-  .logo p {
-    font-size: 1.4rem;
-  }
-  .search-element .form-control {
-    width: 90%;
-    margin: 0 auto;
-    padding: 0.5rem 1rem;
-  }
-  .search-element h3 {
-    font-size: 1.4rem;
-  }
-  .search-list {
-    width: 90%;
-    right: 50%;
-    transform: translateX(50%);
-  }
-  .search-list .search-list-item {
-    width: 100%;
-  }
+.search-element {
+  flex-direction: row;
 }
-@media (min-width: 800px) {
-  .search-element {
-    flex-direction: row;
-  }
-  .search-element h3 {
-    margin-bottom: 0;
-  }
+.search-element h3 {
+  margin-bottom: 0;
 }
+
 .result-container {
   padding: 3rem 0;
 }
@@ -189,7 +167,7 @@ img {
 }
 .movie-info .movie-title {
   font-size: 2rem;
-  color: #E50914;
+  color: #F5C518;
 }
 .movie-info .movie-misc-info {
   list-style-type: none;
@@ -202,7 +180,7 @@ img {
   font-weight: 500;
 }
 .movie-info .movie-misc-info .rated {
-  background-color: #E50914;
+  background-color: #F5C518;
   padding: 0.4rem;
   margin: 0 0.4rem;
   border-radius: 3px;
@@ -227,7 +205,7 @@ img {
   margin: 1rem auto;
 }
 .movie-info .language {
-  color: #E50914;
+  color: #F5C518;
   font-style: italic;
 }
 .movie-info .awards {
@@ -235,32 +213,22 @@ img {
   font-size: 0.9rem;
 }
 .movie-info .awards i {
-  color: #E50914;
+  color: #F5C518;
   margin: 1rem 0.7rem 0 0;
 }
 
-@media (max-width: 450px) {
-  .movie-misc-info {
-    flex-direction: column;
-  }
-  .movie-misc-info li:nth-child(2) {
-    margin: 0.8rem 0;
-  }
+.movie-info {
+  text-align: left;
+  padding-top: 0;
 }
-@media (min-width: 800px) {
-  .movie-info {
-    text-align: left;
-    padding-top: 0;
-  }
-  .movie-info .movie-misc-info {
-    justify-content: flex-start;
-    padding-left: 0;
-  }
-  .movie-info .plot {
-    margin-left: 0;
-  }
-  .movie-info .writer {
-    padding-left: 0;
-    margin-left: 0;
-  }
+.movie-info .movie-misc-info {
+  justify-content: flex-start;
+  padding-left: 0;
+}
+.movie-info .plot {
+  margin-left: 0;
+}
+.movie-info .writer {
+  padding-left: 0;
+  margin-left: 0;
 }/*# sourceMappingURL=main.css.map */
