--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,3 +4,5 @@ $md-dark-color: #383f46;
 $dark-color: #202428;
 $light-dark-color: #292929;
 $yellow-color: #F5C518;
+$site-common-white: rgba(255, 255, 255, 0.94);
+
