--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -8,3 +8,14 @@ img {
   width: 100%;
   display: block;
 }
+a:visited {
+  color: inherit;
+}
+
+a:hover {
+  color: inherit; 
+}
+
+a:active {
+  color: inherit; 
+}
