--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -405,4 +405,66 @@ a:active {
   cursor: pointer;
   color: #DDDDDD;
   background-color: #383f46;
+}
+.filter-container .filter .filterBtn:hover {
+  background-color: #65727f;
+}
+.filter-container .filter .filterBtn:active {
+  background-color: #d1a609;
+}
+
+.sign-in-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 100px);
+}
+.sign-in-container .sign-in {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 500px;
+  border-radius: 20px;
+  background-color: #383f46;
+}
+.sign-in-container .sign-in .sign-top {
+  color: #DDDDDD;
+  margin: 50px 0 0;
+  font-size: 2.6rem;
+  text-align: center;
+}
+.sign-in-container .sign-in .sign-inputs {
+  margin: 80px 20px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.sign-in-container .sign-in .sign-inputs input {
+  border-radius: 10px;
+  height: 60px;
+  outline: none;
+  color: #DDDDDD;
+  padding: 0 20px;
+  font-size: 1.6rem;
+  background-color: #202428;
+  border: none;
+  width: 90%;
+}
+.sign-in-container .sign-in .logSign {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin: 50px 0;
+}
+.sign-in-container .sign-in .logSign button {
+  width: 150px;
+  height: 60px;
+  background-color: #202428;
+  border: none;
+  border-radius: 10px;
+  font-size: 1.4rem;
+  color: #DDDDDD;
 }/*# sourceMappingURL=main.css.map */
