--- a/src/scss/_watchList.scss
+++ b/src/scss/_watchList.scss
@@ -31,7 +31,7 @@
         text-align: center;
         border-radius: 8px;
         background-color: white;
-        z-index: 99;
+        z-index: 1000;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -96,4 +96,13 @@
 
 .changeType.visible {
   display: flex;
+}
+
+.cover{
+  left: 0;
+  top: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 900  ;
 }
