--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -306,7 +306,7 @@ a:active {
   text-align: center;
   border-radius: 8px;
   background-color: white;
-  z-index: 99;
+  z-index: 1000;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -365,6 +365,15 @@ a:active {
 
 .changeType.visible {
   display: flex;
+}
+
+.cover {
+  left: 0;
+  top: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 900;
 }
 
 .profileBtn {
