--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -294,6 +294,20 @@ a:active {
   position: relative;
   width: 100%;
   cursor: pointer;
+  position: relative;
+}
+.watch-list-container .watch-list-item .movie-item-img:hover .movie-info {
+  display: flex;
+}
+.watch-list-container .watch-list-item .movie-item-img .movie-info {
+  display: none;
+  flex-direction: column;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  z-index: 999;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(20px);
 }
 .watch-list-container .watch-list-item .movie-item-img .movieTypeBtn {
   border: none;
