--- a/src/scss/_watchList.scss
+++ b/src/scss/_watchList.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  padding: 50px 0;
+  padding: 50px 0 250px;
 
   .watch-list-item {
     display: flex;
@@ -28,12 +28,19 @@
       .movie-info{
         display: none;
         flex-direction: column;
+        padding: 20px;
+        border-radius: 15px;
         top: 50%;
         left: 50%;
         position: absolute;
         z-index: 999;
-        backdrop-filter: blur(10px);
-        -webkit-backdrop-filter: blur(20px);
+        width: 350px;
+        backdrop-filter: blur(100px);
+        -webkit-backdrop-filter: blur(100px);
+        z-index: 1001;
+        i{
+          color: #FFD43B;
+        }
       }
       .movieTypeBtn {
         border: none;
