--- a/frontend/src/scss/main.css
+++ b/frontend/src/scss/main.css
@@ -45,6 +45,7 @@ a:active {
 .wrapper {
   min-height: 100vh;
   background-color: #202428;
+  position: relative;
 }
 
 .search-container {
@@ -316,6 +317,7 @@ a:active {
   top: 40px;
   right: 0;
   flex-direction: column;
+  display: none;
 }
 .watch-list-container .watch-list-item .movieTypeBtn .changeType .type {
   text-align: left;
@@ -407,10 +409,6 @@ a:active {
   color: red;
 }
 
-.changeType {
-  display: none;
-}
-
 .visible {
   display: flex;
 }
@@ -422,7 +420,9 @@ a:active {
 .cover {
   left: 0;
   top: 0;
+  bottom: 0;
   position: absolute;
+  display: none;
   width: 100%;
   height: 100%;
   z-index: 900;
