Register added but cant connect to backend pls try to fix it

--- a/frontend/src/scss/_wrapper.scss
+++ b/frontend/src/scss/_wrapper.scss
@@ -3,3 +3,10 @@
   background-color: $dark-color;
   position: relative;
 }
+
+.signUpPage{
+  min-height: 100vh;
+  background-color: $dark-color;
+  display: flex;
+  align-items: center;
+}
