--- a/frontend/src/scss/_signIn.scss
+++ b/frontend/src/scss/_signIn.scss
@@ -2,14 +2,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 100px) ;
-  .sign-in{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 500px;
-    border-radius: 20px;
-    background-color: $md-dark-color;
+  height: auto;
+  flex-direction: column;
+  width: 500px;
+  border-radius: 20px;
+  background-color: $md-dark-color;
     .sign-top{
       color: $site-common-white;
       margin: 50px 0 0;
@@ -23,6 +20,7 @@
       justify-content: center;
       align-items: center;
       gap: 20px;
+      width: 100%;
       input{
         border-radius: 10px;
         height: 60px;
@@ -32,15 +30,25 @@
         font-size: 1.6rem;
         background-color: $dark-color;
         border: none;
-        width: 90%;
+        width: 75%;
       }
     }
     .logSign{
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       gap: 20px;
-      margin: 50px 0;
+      margin: 10px 0 50px;
+      color: $site-common-white;
+      div{
+        display: flex;
+        gap: 10px;
+        font-size: 1.1rem;
+        a{
+          color: white; 
+        }
+      }
       button{
         width: 150px;
         height: 60px;
@@ -49,7 +57,36 @@
         border-radius: 10px;
         font-size: 1.4rem;
         color: $site-common-white;
+        cursor: pointer;
       }
     }
-  }
+}
+.justify{
+  justify-content: center;
+  display: flex;
+}
+.instructions {
+  background: $dark-color;
+  color: $site-common-white ;
+  position: relative;
+  border-radius: 10px;
+  padding: 10px;
+  width: 75%;
+}
+.offscreen {
+  position: absolute;
+  left: -9999px;
+}
+.hide {
+  display: none;
+}
+.errmsg {
+  background-color: lightpink;
+  color: firebrick;
+  font-weight: bold;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.line {
+  display: inline-block;
 }
