--- a/frontend/src/scss/main.css
+++ b/frontend/src/scss/main.css
@@ -48,6 +48,13 @@ a:active {
   position: relative;
 }
 
+.signUpPage {
+  min-height: 100vh;
+  background-color: #202428;
+  display: flex;
+  align-items: center;
+}
+
 .search-container {
   width: 65%;
   margin: 0 auto;
@@ -485,31 +492,28 @@ a:active {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 100px);
-}
-.sign-in-container .sign-in {
-  display: flex;
+  height: auto;
   flex-direction: column;
-  justify-content: center;
   width: 500px;
   border-radius: 20px;
   background-color: #383f46;
 }
-.sign-in-container .sign-in .sign-top {
+.sign-in-container .sign-top {
   color: #DDDDDD;
   margin: 50px 0 0;
   font-size: 2.6rem;
   text-align: center;
 }
-.sign-in-container .sign-in .sign-inputs {
+.sign-in-container .sign-inputs {
   margin: 80px 20px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 20px;
+  width: 100%;
 }
-.sign-in-container .sign-in .sign-inputs input {
+.sign-in-container .sign-inputs input {
   border-radius: 10px;
   height: 60px;
   outline: none;
@@ -518,16 +522,26 @@ a:active {
   font-size: 1.6rem;
   background-color: #202428;
   border: none;
-  width: 90%;
+  width: 75%;
 }
-.sign-in-container .sign-in .logSign {
+.sign-in-container .logSign {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 20px;
-  margin: 50px 0;
+  margin: 10px 0 50px;
+  color: #DDDDDD;
 }
-.sign-in-container .sign-in .logSign button {
+.sign-in-container .logSign div {
+  display: flex;
+  gap: 10px;
+  font-size: 1.1rem;
+}
+.sign-in-container .logSign div a {
+  color: white;
+}
+.sign-in-container .logSign button {
   width: 150px;
   height: 60px;
   background-color: #202428;
@@ -535,6 +549,42 @@ a:active {
   border-radius: 10px;
   font-size: 1.4rem;
   color: #DDDDDD;
+  cursor: pointer;
+}
+
+.justify {
+  justify-content: center;
+  display: flex;
+}
+
+.instructions {
+  background: #202428;
+  color: #DDDDDD;
+  position: relative;
+  border-radius: 10px;
+  padding: 10px;
+  width: 75%;
+}
+
+.offscreen {
+  position: absolute;
+  left: -9999px;
+}
+
+.hide {
+  display: none;
+}
+
+.errmsg {
+  background-color: lightpink;
+  color: firebrick;
+  font-weight: bold;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.line {
+  display: inline-block;
 }
 
 .profile-section {
