--- a/frontend/src/assets/scss/_watchList.scss
+++ b/frontend/src/assets/scss/_watchList.scss
@@ -1,7 +1,3 @@
-// Assuming you have variables defined elsewhere, like colors
-// Define your variables if necessary
-//$site-common-white: #ffffff;
-
 .watch-list-container {
   display: flex;
   flex-wrap: wrap;
@@ -13,7 +9,25 @@
     flex-direction: column;
     width: calc(20% - 16px);
     position: relative;
-    
+    .changeType{
+      position: absolute;
+      top: 35px;
+      right: 5px;
+      flex-direction: column;
+      display: none;
+      z-index: 9999;
+      .type{
+        text-align: left;
+        background-color: white;
+        padding: 10px;
+        font-size: 0.8rem;
+        width: 120px;
+        transition: 0.1s;
+        &:hover{
+          background-color: $site-common-white;
+        }
+      }
+    }
     .movieTypeBtn {
       border: none;
       cursor: pointer;
@@ -29,74 +43,42 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      
-      &:hover {
+      &:hover{
         background-color: rgba(255, 255, 255, 0.897);
-        .movie-info {
-          display: none !important;
+        .movie-info{
+          display: none!important;
         }
       }
-
-      i {
+      i{
         font-size: 1.25rem;
-      }
-    }
-
-    .changeType {
-      position: absolute;
-      top: 30px;
-      right: 0;
-      flex-direction: column;
-      display: none;
-      z-index: 999;
-      .type {
-        text-align: left;
-        background-color: white;
-        padding: 10px;
-        font-size: 0.8rem;
-        width: 120px;
-        transition: 0.1s;
-        
-        &:hover {
-          background-color: $site-common-white; // Ensure $site-common-white is defined
-        }
-      }
-    }
-
-    &:hover {
-      .changeType {
-        display: flex;
       }
     }
 
     p {
       margin: 10px 0;
       font-size: 0.8rem;
-      color: $site-common-white; // Ensure $site-common-white is defined
+      color: $site-common-white;
     }
 
     .movie-item-img {
       position: relative;
       width: 100%;
       cursor: pointer;
-
-      .imdb-img {
+      .imdb-img{
         background-color: white;
         position: absolute;
         top: -5px;
         left: 5px;
         font-size: 0.8rem;
         border-radius: 5px;
-        color: $dark-color; // Ensure $dark-color is defined
+        color: $dark-color;
         padding: 4px 5px;
-
-        i {
+        i{  
           padding-right: 3px;
           color: #FFD43B;
         }
       }
-
-      .movie-info {
+      .movie-info{
         display: none;
         flex-direction: column;
         padding: 15px;
@@ -109,20 +91,17 @@
         -webkit-backdrop-filter: blur(100px);
         z-index: 1001;
         gap: 10px;
-
-        .img-title {
+        .img-title{
           font-size: 1.3rem;
         }
-
-        .info-text {
+        .info-text{
           display: flex;
           flex-wrap: wrap;
           gap: 5px;
           font-size: 0.85rem;
           color: darken($site-common-white, 15%);
         }
-
-        i {
+        i{
           color: #FFD43B;
         }
       }
@@ -132,12 +111,6 @@
         object-fit: cover;
         width: 100%;
         transition: filter 0.3s ease;
-
-        &:hover {
-          .movie-info {
-            display: flex;
-          }
-        }
       }
 
       &::after {
@@ -155,6 +128,9 @@
       }
 
       &:hover {
+        .movie-info{
+          display: flex;
+        }
         &::after {
           opacity: 1;
         }
@@ -163,9 +139,20 @@
   }
 }
 
-// Additional global or utility styles can be defined here if needed
+.remove{
+  color: red;
+}
+.movie-info-title{
+  font-size: 1.1rem;
+}
 
-.cover {
+.visible {
+  display: flex;
+}
+.lighter{
+  color: white;
+}
+.cover{
   left: 0;
   top: 0;
   bottom: 0;
@@ -174,7 +161,4 @@
   width: 100%;
   height: 100%;
   z-index: 900;
-}
-.remove{
-  color: red;
 }
