--- a/frontend/src/assets/scss/_filterBar.scss
+++ b/frontend/src/assets/scss/_filterBar.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 40px 0 0;
+  flex-wrap: wrap;
   .filterBy{
     padding: 5px;
     color: $site-common-white;
@@ -16,6 +17,7 @@
     display: flex;
     align-items: center;
     gap: 10px;
+    flex-wrap: wrap;
     .filterBtn{
       font-size: 1rem;
       border: none;
