--- a/frontend/src/assets/scss/_watchList.scss
+++ b/frontend/src/assets/scss/_watchList.scss
@@ -38,6 +38,7 @@
         font-size: 0.8rem;
         width: 120px;
         transition: 0.1s;
+        cursor: pointer;
         &:hover{
           background-color: $site-common-white;
         }
